prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_not_string.diag.txt
ERROR: expected 'expression'
testData/diagnostics/interp_str_not_string.nut:3:8

println($'{{{{{{{{')
        ^


